# pifi-spammer

./: Cargo.toml  README.md
src/: main.rs
