[package]
name = "pifi-spammer"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-executor = { version = "0.6.1", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
cyw43 = {version = "0.2.0"}
cyw43-pio = {version = "0.2.0"}

defmt = "0.3"
defmt-rtt = "0.4"
static_cell = "2.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
